--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+server:
+  servlet:
+    context-path: /mobi
 spring:
   datasource:
     url: jdbc:mysql://localhost:3308/AutoDealDB?useSSL=false&createDatabaseIfNotExists=true&allowPublicKeyRetrieval=true&useUnicode=true
@@ -16,3 +19,8 @@ logging:
     org:
       hibernate:
         SQL: DEBUG
+    logging:
+      level:
+        org.springframework.security: DEBUG
+
+
