--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     ports:
       - "3308:3306"
     volumes:
-      - mysqlDB_data:/var/lib/mysql
+    #  - mysqlDB_data:/var/lib/mysql
       - ./src/main/resources/init.sql:/docker-entrypoint-initdb.d/init.sql
 
 volumes:
